<resources>
    <string name="app_name">TicTacToe With Dark Mode</string>
    <string name="button">Button</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="with_dark_mode">With Dark Mode</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="player_X">Player X:</string>
    <string name="player_O">Player O:</string>
    <string name="enter_your_names">Enter your names:</string>
    <string name="Optional">OPTIONAL</string>
    <string name="goesbacktomain">goesBackToMain</string>
    <string name="created_with_love_by_alex_gajda">Created with love by Alex Gajda</string>
    <string name="x">X</string>
    <string name="title_activity_give_names">giveNamesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="darkmode">Dark Mode</string>
    <string name="with">With</string>
    <string name="todo">TODO</string>
    <string name="optional">Optional</string>
    <string name="player_2">Player 2:</string>
    <string name="player_1">Player 1:</string>
</resources>