<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsActivity">

    <ImageButton
        android:id="@+id/returnToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/goesbacktomain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/settingsTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <Switch
        android:id="@+id/darkSwitch"
        android:layout_width="202dp"
        android:layout_height="91dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="108dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Display3"
        android:text="@string/dark_mode"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/settingsTextview"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="@+id/settingsTextview"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextview" />

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="202dp"
        android:layout_height="91dp"
        android:layout_marginStart="100dp"
        android:text="@string/sound"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/settingsTextview"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="@+id/settingsTextview"
        app:layout_constraintTop_toBottomOf="@+id/darkSwitch" />

    <Switch
        android:id="@+id/vibrationSwitch"
        android:layout_width="202dp"
        android:layout_height="91dp"
        android:layout_marginStart="100dp"
        android:text="@string/vibration"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/settingsTextview"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="@+id/settingsTextview"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>